--- a/Akebia-HTML5/css/principal.css
+++ b/Akebia-HTML5/css/principal.css
@@ -117,7 +117,7 @@ section{
     margin-bottom: -2px;
     margin-left: 10%;
     margin-right: 10%;
-    height: 900px;
+    height: auto;
 }
 
 .contentText{
