--- a/Akebia-HTML4/css/formularios.css
+++ b/Akebia-HTML4/css/formularios.css
@@ -93,9 +93,13 @@ body{
 }
 
 .login-page {
-    width: 360px;
-    padding: 8% 0 0;
-    margin: auto;
+    width: auto;
+    height: auto;
+    text-align: center;
+    padding-top: 20%;
+    padding-bottom: 50%;
+    padding-left: 5%;
+    padding-right: 5%;
 }
 
 .form {
@@ -142,7 +146,7 @@ body{
     font-family: "Roboto", sans-serif;
     margin: 15px 0 0;
     color: #000000;
-    font-size: 15px;
+    font-size: 80%;
 }
 
 .form .message a {
