--- a/Akebia-HTML4/css/principal.css
+++ b/Akebia-HTML4/css/principal.css
@@ -99,7 +99,7 @@ body{
     margin-bottom: -2px;
     margin-left: 10%;
     margin-right: 10%;
-    height: 900px;
+    height: auto;
 }
 
 .contentText{
